--- a/app/src/main/res/layout/fragment_farmer__side__accepted_request.xml
+++ b/app/src/main/res/layout/fragment_farmer__side__accepted_request.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.Farmer_Side_Accepted_request">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/acceptR"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="accept" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
